[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv-compliant data cleaning agent environment"
authors = [{ name = "Rutu Goti" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "pydantic>=2.7.1",
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "openai>=1.30.1",
    "openenv",
    "httpx>=0.27.0",
]

[project.scripts]
serve = "uvicorn server.app:app --host 0.0.0.0 --port 7860"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["env", "tasks", "graders", "baseline", "api", "server"]

