[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv-compliant data cleaning agent environment"
authors = [{ name = "Rutu Goti" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "openenv-core>=0.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
]

[project.scripts]
serve = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["env", "tasks", "graders", "baseline", "api", "server"]